--- a/backendApi/src/main/resources/application.properties
+++ b/backendApi/src/main/resources/application.properties
@@ -10,4 +10,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
  spring.jpa.hibernate.ddl-auto=update
  #careate update create-drop validate
+ spring.jpa.show-sql=true
+ 
  
