--- a/backendApi/src/main/resources/application.properties
+++ b/backendApi/src/main/resources/application.properties
@@ -12,4 +12,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
  #careate update create-drop validate
  spring.jpa.show-sql=true
  
+ logging.level.org.springframework.security=DEBUG
  
+ spring.security.user.name=amit
+ spring.security.user.password=amit123
+ spring.security.user.roles=ADMIN
